all episodes  from s14 on are maybe good, which is being super generous

--- a/episodes/season_15.yml
+++ b/episodes/season_15.yml
@@ -7,7 +7,7 @@ episodes:
     name on his list; Professor Frink reanimates his father's corpse; Bart and Milhouse
     play pranks with a watch that can stop time.
   simpsonsworld_id: 227335747784
-  good: false
+  good: maybe
   characters: 
 - title: My Mother the Carjacker
   season: 15
@@ -16,7 +16,7 @@ episodes:
     Mr. Burns' germ warfare plant in the 1960s.  Homer's heartfelt testimony helps
     win her release... but Mr. Burns concocts a plot to get revenge.
   simpsonsworld_id: 227339843917
-  good: false
+  good: maybe
   characters: 
 - title: The President Wore Pearls
   season: 15
@@ -25,7 +25,7 @@ episodes:
     a better place to learn.  But Skinner tricks her into cutting well-liked programs...
     prompting Lisa to call a general student strike.
   simpsonsworld_id: 227348035643
-  good: false
+  good: maybe
   characters: 
 - title: The Regina Monologues
   season: 15
@@ -33,7 +33,7 @@ episodes:
   description: The Simpsons travel to England, where Homer is imprisoned in the Tower
     of London after he smashes a car into the Queen's royal coach.
   simpsonsworld_id: 227349059824
-  good: false
+  good: maybe
   characters: 
 - title: The Fat and the Furriest
   season: 15
@@ -42,7 +42,7 @@ episodes:
     him.  But when he seeks a rematch, Homer bonds with the animal and tries to save
     its life.
   simpsonsworld_id: 227355715580
-  good: false
+  good: maybe
   characters: 
 - title: Today I am a Clown
   season: 15
@@ -51,7 +51,7 @@ episodes:
     he chooses Homer as temporary guest host.  But when Homer's career unexpectedly
     takes off, Krusty finds himself out of a job.
   simpsonsworld_id: 227360323557
-  good: false
+  good: maybe
   characters: 
 - title: "'Tis the Fifteenth Season"
   season: 15
@@ -60,7 +60,7 @@ episodes:
     after watching an animated version of A Christmas Carol on television.  But Flanders
     find it impossible to live as the second-nicest-guy in town. Presented by FXX.
   simpsonsworld_id: 227364931670
-  good: false
+  good: maybe
   characters: 
 - title: Marge vs. Singles, Seniors, Childless Couples and Teens, and Gays
   season: 15
@@ -68,7 +68,7 @@ episodes:
   description: Marge opposes a political group made up of childless people who've
     grown fed-up with accommodating people with families.
   simpsonsworld_id: 227369027832
-  good: false
+  good: maybe
   characters: 
 - title: I, (Annoyed Grunt)-Bot
   season: 15
@@ -77,7 +77,7 @@ episodes:
     the device to make it work; Lisa searches for a replacement for Snowball II when
     the cat is run over by a car.
   simpsonsworld_id: 227376707538
-  good: false
+  good: maybe
   characters: 
 - title: Diatribe of a Mad Housewife
   season: 15
@@ -85,7 +85,7 @@ episodes:
   description: Homer buys an ambulance and starts responding to medical emergencies;
     Marge authors her own romance novel.
   simpsonsworld_id: 227378755925
-  good: false
+  good: maybe
   characters: 
 - title: Margical History Tour
   season: 15
@@ -94,7 +94,7 @@ episodes:
     Henry the Eighth and his quest for a son; Sacagawea''s journey with Lewis and
     Clark; and the rivalry between Mozart and Salieri.'
   simpsonsworld_id: 227386947567
-  good: false
+  good: maybe
   characters: 
 - title: Milhouse Doesn't Live Here Anymore
   season: 15
@@ -102,7 +102,7 @@ episodes:
   description: When Milhouse and his mother relocate to Capital City, Bart strikes
     up a friendship with Lisa; Homer makes money by pretending to be a transient.
   simpsonsworld_id: 227392067706
-  good: false
+  good: maybe
   characters: 
 - title: Smart and Smarter
   season: 15
@@ -110,7 +110,7 @@ episodes:
   description: Lisa searches for a new identity when baby Maggie turns out to be smarter
     than her.
   simpsonsworld_id: 229331523584
-  good: false
+  good: maybe
   characters: 
 - title: The Ziff Who Came to Dinner
   season: 15
@@ -118,7 +118,7 @@ episodes:
   description: Homer becomes the majority shareholder of Artie Ziff's troubled Internet
     company-and ends up being arrested by the Securities and Exchange Commission.
   simpsonsworld_id: 227426371786
-  good: false
+  good: maybe
   characters: 
 - title: Co-Dependent's Day
   season: 15
@@ -127,7 +127,7 @@ episodes:
     Marge in the driver's seat so she'll be blamed for the accident; Lisa and Bart
     complain to the creator of the Cosmic Wars saga about his latest films.
   simpsonsworld_id: 227399235673
-  good: false
+  good: maybe
   characters: 
 - title: The Wandering Juvie
   season: 15
@@ -135,7 +135,7 @@ episodes:
   description: Bart's latest prank lands him in juvenile prison, where a tough girl
     forces him to go on the lam.
   simpsonsworld_id: 227402307606
-  good: false
+  good: maybe
   characters: 
 - title: My Big Fat Geek Wedding
   season: 15
@@ -143,7 +143,7 @@ episodes:
   description: Mrs. Krabappel dumps Principal Skinner at the altar and has a passionate
     affair with the Comic Book Guy.
   simpsonsworld_id: 227423299561
-  good: false
+  good: maybe
   characters: 
 - title: Catch 'Em If You Can
   season: 15
@@ -151,7 +151,7 @@ episodes:
   description: Bart and Lisa pursue Homer and Marge after they sneak away on a second
     honeymoon; Grampa catches the eye of a dashing Cuban man.
   simpsonsworld_id: 227415619717
-  good: false
+  good: maybe
   characters: 
 - title: Simple Simpson
   season: 15
@@ -159,7 +159,7 @@ episodes:
   description: Homer confronts evildoers in the form of his crime-fighting alter ego,
     the Pie Man-until Mr. Burns blackmails him into throwing a pie at the Dalai Lama.
   simpsonsworld_id: 227327555884
-  good: false
+  good: maybe
   characters: 
 - title: The Way We Weren't
   season: 15
@@ -168,7 +168,7 @@ episodes:
     as he and Marge recount their versions of time spent at a summer camp, Homer realizes
     he caused Marge thirty years of heartbreak.
   simpsonsworld_id: 227330115859
-  good: false
+  good: maybe
   characters: 
 - title: Bart-Mangled Banner
   season: 15
@@ -176,7 +176,7 @@ episodes:
   description: The Simpsons are thrown in prison after Bart accidentally moons the
     American flag.
   simpsonsworld_id: 227410499679
-  good: false
+  good: maybe
   characters: 
 - title: Fraudcast News
   season: 15
@@ -185,5 +185,5 @@ episodes:
     to polish his image, but soon finds himself at odds with Lisa, who started publishing
     her own newspaper.
   simpsonsworld_id: 227405379707
-  good: false
+  good: maybe
   characters: 
