--- a/episodes/season_25.yml
+++ b/episodes/season_25.yml
@@ -7,7 +7,7 @@ episodes:
     strangely, Lisa worries that her father has been brainwashed and is now part of
     a terrorist plot to blow up the power plant.
   simpsonsworld_id: 307191875741
-  good: false
+  good: maybe
   characters: 
 - title: Treehouse of Horror XXIV
   season: 25
@@ -16,7 +16,7 @@ episodes:
     a visit from The Fat in the Hat; when Bart is decapitated, his head is sewn onto
     Lisa's body; Homer plots to kill Moe at a circus freak show.
   simpsonsworld_id: 310259779794
-  good: false
+  good: maybe
   characters: 
 - title: Four Regrettings and a Funeral
   season: 25
@@ -25,7 +25,7 @@ episodes:
     to reexamine a crucial decision in their lives one that has brought them the most
     regret.
   simpsonsworld_id: 311688259548
-  good: false
+  good: maybe
   characters: 
 - title: YOLO
   season: 25
@@ -34,7 +34,7 @@ episodes:
     pal; when a cheating scandal rocks Springfield Elementary, Lisa establishes an
     honor code.
   simpsonsworld_id: 304473155645
-  good: false
+  good: maybe
   characters: 
 - title: Labor Pains
   season: 25
@@ -43,7 +43,7 @@ episodes:
     her baby; Lisa helps underpaid cheerleaders organize so they can demand a salary
     increase from a greedy football team owner.
   simpsonsworld_id: 311105091548
-  good: false
+  good: maybe
   characters: 
 - title: The Kid Is All Right
   season: 25
@@ -51,7 +51,7 @@ episodes:
   description: Lisa is elated to befriend Isabel, a smart new student at school, only
     to realize that she and Isabel are on opposite sides of the political spectrum.
   simpsonsworld_id: 310523971648
-  good: false
+  good: maybe
   characters: 
 - title: Yellow Subterfuge
   season: 25
@@ -60,7 +60,7 @@ episodes:
     field trip aboard a submarine; Lisa suggests to the financially-strapped Krusty
     that he sell the foreign rights to his television show.
   simpsonsworld_id: 304476739664
-  good: false
+  good: maybe
   characters: 
 - title: White Christmas Blues
   season: 25
@@ -69,7 +69,7 @@ episodes:
     breakfast after Springfield becomes the only town in America to receive snowfall;
     Lisa vows to give her loved ones modest gifts that come from the heart.
   simpsonsworld_id: 307199043880
-  good: false
+  good: maybe
   characters: 
 - title: Steal This Episode
   season: 25
@@ -77,7 +77,7 @@ episodes:
   description: Homer is put on trial after the FBI catches him illegally downloading
     movies from the Internet.
   simpsonsworld_id: 310523459925
-  good: false
+  good: maybe
   characters: 
 - title: Married to the Blob
   season: 25
@@ -85,7 +85,7 @@ episodes:
   description: The Comic Book Guy marries a Japanese woman, only to discover that
     the woman's father disapproves of the union.
   simpsonsworld_id: 310541379637
-  good: false
+  good: maybe
   characters: 
 - title: Specs and the City
   season: 25
@@ -93,7 +93,7 @@ episodes:
   description: Homer uses augmented reality glasses to spy on Marge; Nelson demands
     a Valentine's Day card from Bart.
   simpsonsworld_id: 307204163997
-  good: false
+  good: maybe
   characters: 
 - title: Diggs
   season: 25
@@ -101,7 +101,7 @@ episodes:
   description: Bart befriends a fellow student and falconry expert, only to discover
     that the boy suffers from mental illness.
   simpsonsworld_id: 310529091639
-  good: false
+  good: maybe
   characters: 
 - title: The Man Who Grew Too Much
   season: 25
@@ -109,7 +109,7 @@ episodes:
   description: Sideshow Bob genetically alters his DNA, giving him superhuman strength;
     Marge volunteers as a teen abstinence counselor.
   simpsonsworld_id: 307207235909
-  good: false
+  good: maybe
   characters: 
 - title: The Winter of His Content
   season: 25
@@ -118,7 +118,7 @@ episodes:
     in with them, Marge worries that Homer is picking up their habits and is turning
     into an old man; a gang of bullies accepts Bart as one of their own.
   simpsonsworld_id: 307209283970
-  good: false
+  good: maybe
   characters: 
 - title: The War of Art
   season: 25
@@ -127,7 +127,7 @@ episodes:
     parents at a yard sale, a painting that turns out to be worth a great deal of
     money.
   simpsonsworld_id: 311117891947
-  good: false
+  good: maybe
   characters: 
 - title: You Don't Have to Live Like a Referee
   season: 25
@@ -135,7 +135,7 @@ episodes:
   description: After Lisa delivers a school report on why her father is her hero,
     Homer is tapped to referee World Cup soccer in Brazil.
   simpsonsworld_id: 304489539783
-  good: false
+  good: maybe
   characters: 
 - title: Luca$
   season: 25
@@ -143,7 +143,7 @@ episodes:
   description: Lisa falls for a competitive eater who subconsciously reminds her of
     Homer; after Bart hides Jailbird from the police, he begins receiving stolen gifts.
   simpsonsworld_id: 304500803520
-  good: false
+  good: maybe
   characters: 
 - title: Days of Future Future
   season: 25
@@ -152,7 +152,7 @@ episodes:
     with his estranged wife, Jenda; Lisa thinks Milhouse is far more interesting after
     he's bitten by a zombie.
   simpsonsworld_id: 310257731892
-  good: false
+  good: maybe
   characters: 
 - title: What to Expect When Bart's Expecting
   season: 25
@@ -161,7 +161,7 @@ episodes:
     the teacher ends up getting pregnant, word spreads that Bart can help couples
     conceive.
   simpsonsworld_id: 307214403888
-  good: false
+  good: maybe
   characters: 
 - title: Brick Like Me
   season: 25
@@ -169,7 +169,7 @@ episodes:
   description: After Homer bonds with Lisa, Homer's imagination creates a world in
     which everything is made of Lego toys.
   simpsonsworld_id: 311243331763
-  good: false
+  good: maybe
   characters: 
 - title: Pay Pal
   season: 25
@@ -178,7 +178,7 @@ episodes:
     other couples fails miserably, Lisa discovers a shocking secret about her new
     best friend.
   simpsonsworld_id: 304502851923
-  good: false
+  good: maybe
   characters: 
 - title: Yellow Badge of Cowardge
   season: 25
@@ -187,7 +187,7 @@ episodes:
     winning a school race; Homer vows to hold his own Fourth of July fireworks display
     after Springfield's holiday celebration is canceled.
   simpsonsworld_id: 307219523604
-  good: false
+  good: maybe
   characters: 
 - title: The Longest Daycare
   season: 25
@@ -196,5 +196,5 @@ episodes:
     release of Ice Age: Continental Drift.  It was nominated for an Academy Award
     for Best Animated Short. Presented by FXX.'
   simpsonsworld_id: 588949571786
-  good: false
+  good: maybe
   characters: 
