--- a/episodes/season_29.yml
+++ b/episodes/season_29.yml
@@ -6,7 +6,7 @@ episodes:
   description: In a world of magic, Marge's mother is transformed into an Ice Walker
     and must rely on Lisa to use magic to help Homer afford the cure.
   simpsonsworld_id: 1075435075944
-  good: false
+  good: maybe
   characters: 
 - title: Springfield Splendor
   season: 29
@@ -14,7 +14,7 @@ episodes:
   description: Marge and Lisa decide to turns an unpleasant experience Lisa had into
     a successful graphic novel.
   simpsonsworld_id: 1080357443795
-  good: false
+  good: maybe
   characters: 
 - title: Whistler's Father
   season: 29
@@ -22,7 +22,7 @@ episodes:
   description: Homer stumbles upon Maggie's incredible talent for whistling and decides
     to start her on the path to becoming a baby celebrity.
   simpsonsworld_id: 1073411651711
-  good: false
+  good: maybe
   characters: 
 - title: Treehouse of Horror XXVIII
   season: 29
@@ -31,7 +31,7 @@ episodes:
     an alternate dimension, Lisa stumbles upon a disturbingly perfect version of her
     family.
   simpsonsworld_id: 1078509635693
-  good: false
+  good: maybe
   characters: 
 - title: Grampy Can Ya Hear Me
   season: 29
@@ -39,7 +39,7 @@ episodes:
   description: Grampa Simpson is finally able to hear the various things that people
     say about him after he receives a new hearing aid.
   simpsonsworld_id: 1088584771605
-  good: false
+  good: maybe
   characters: 
 - title: The Old Blue Mayor She Ain't What She Used to Be
   season: 29
@@ -47,7 +47,7 @@ episodes:
   description: Marge decides to enter the race to become the next mayor of Springfield
     as she grows increasingly frustrated with how the local government operates.
   simpsonsworld_id: 1094410819778
-  good: false
+  good: maybe
   characters: 
 - title: Singin' in the Lane
   season: 29
@@ -55,7 +55,7 @@ episodes:
   description: Homer and the guys try helping Moe cheer up by getting their old bowling
     team back together again, but they soon face a team of arrogant millionaires.
   simpsonsworld_id: 1099353155881
-  good: false
+  good: maybe
   characters: 
 - title: Mr. Lisa's Opus
   season: 29
@@ -63,7 +63,7 @@ episodes:
   description: In the future, Lisa works on writing her Harvard college application
     essay by reflecting on how certain disappointing birthdays made her who she is.
   simpsonsworld_id: 1108700739531
-  good: false
+  good: maybe
   characters: 
 - title: Gone Boy
   season: 29
@@ -71,7 +71,7 @@ episodes:
   description: When Bart suddenly disappears, the town organizes a search party in
     the hopes of finding him.
   simpsonsworld_id: 1113094211783
-  good: false
+  good: maybe
   characters: 
 - title: Haw-Haw Land
   season: 29
@@ -79,7 +79,7 @@ episodes:
   description: While the Simpson family attends a STEM conference, Lisa becomes attracted
     to a pianist and Bart learns about his natural talent for chemistry.
   simpsonsworld_id: 1131039811958
-  good: false
+  good: maybe
   characters: 
 - title: Fink Gets Testy
   season: 29
@@ -87,5 +87,5 @@ episodes:
   description: When Mr. Burns begins to worry that the world is coming to an end,
     he starts testing all of the residents of to figure out who would be worth saving.
   simpsonsworld_id: 1136372803875
-  good: false
+  good: maybe
   characters: 
