--- a/episodes/season_14.yml
+++ b/episodes/season_14.yml
@@ -7,7 +7,7 @@ episodes:
     zombie cowboys threaten to destroy Springfield after Lisa outlaws guns; the Simpsons
     travel to an island inhabited by 'manimals.'
   simpsonsworld_id: 221301315863
-  good: false
+  good: maybe
   characters: 
 - title: How I Spent My Strummer Vacation
   season: 14
@@ -16,7 +16,7 @@ episodes:
     kissing goodbye his dreams of becoming a rock 'n' roll star, Marge enrolls him
     a fantasy rock star camp run by The Rolling Stones.
   simpsonsworld_id: 221293123693
-  good: false
+  good: maybe
   characters: 
 - title: Bart vs. Lisa vs. 3rd Grade
   season: 14
@@ -24,7 +24,7 @@ episodes:
   description: Bart and Lisa are horrified when they both end up in the same 3rd grade
     class.
   simpsonsworld_id: 221347395722
-  good: false
+  good: maybe
   characters: 
 - title: Large Marge
   season: 14
@@ -33,7 +33,7 @@ episodes:
     surgery resulting in larger breasts; Bart and Milhouse get into mischief that
     leads to a public relations nightmare for Krusty.
   simpsonsworld_id: 221352515586
-  good: false
+  good: maybe
   characters: 
 - title: Helter Shelter
   season: 14
@@ -42,7 +42,7 @@ episodes:
     seek shelter elsewhere... and ends up participating in a reality TV program set
     in a house from the 1800s.
   simpsonsworld_id: 221388355650
-  good: false
+  good: maybe
   characters: 
 - title: The Great Louse Detective
   season: 14
@@ -50,7 +50,7 @@ episodes:
   description: When someone attempts to murder Homer, Sideshow Bob is released from
     prison to help identify the culprit before he strikes again.
   simpsonsworld_id: 221467203550
-  good: false
+  good: maybe
   characters: 
 - title: Special Edna
   season: 14
@@ -59,7 +59,7 @@ episodes:
     family heads for Orlando to attend the ceremony.  But Skinner fears he may lose
     Krabappel forever... and asks Bart to sabotage the affair.
   simpsonsworld_id: 221467715532
-  good: false
+  good: maybe
   characters: 
 - title: The Dad Who Knew Too Little
   season: 14
@@ -67,7 +67,7 @@ episodes:
   description: Homer hires a shady private investigator to spy on Lisa when he realizes
     he doesn't know very much about his daughter.
   simpsonsworld_id: 221531715548
-  good: false
+  good: maybe
   characters: 
 - title: The Strong Arms of The Ma
   season: 14
@@ -75,7 +75,7 @@ episodes:
   description: When Marge is mugged at the Kwik-E-Mart, she develops agoraphobia and
     ends up living in the basement... until she turns into a fearless bodybuilder.
   simpsonsworld_id: 221532739689
-  good: false
+  good: maybe
   characters: 
 - title: Pray Anything
   season: 14
@@ -84,7 +84,7 @@ episodes:
     his lot in life.  But when he injures himself coming out of church, Homer sues
     for damages... and is awarded the church itself.
   simpsonsworld_id: 221526595805
-  good: false
+  good: maybe
   characters: 
 - title: Barting Over
   season: 14
@@ -93,7 +93,7 @@ episodes:
     he appeared in as a baby-and that Homer spent the money he earned-he sues for
     emancipation and moves out of the house.
   simpsonsworld_id: 221696067841
-  good: false
+  good: maybe
   characters: 
 - title: I'm Spelling as Fast as I Can
   season: 14
@@ -102,7 +102,7 @@ episodes:
     scholarship in exchange for losing; Homer falls hopelessly in love with Krustyburger's
     limited-time-only rib sandwich.
   simpsonsworld_id: 221698627830
-  good: false
+  good: maybe
   characters: 
 - title: A Star is Born-Again
   season: 14
@@ -111,7 +111,7 @@ episodes:
     when the relationship blossoms, Ned's faith is put to the test when the star wants
     to have premarital sex.
   simpsonsworld_id: 221695043703
-  good: false
+  good: maybe
   characters: 
 - title: Mr. Spritz Goes To Washington
   season: 14
@@ -120,7 +120,7 @@ episodes:
     them over the Simpson's house, the family convinces Krusty to run for congress
     so he can change the law.
   simpsonsworld_id: 221699651686
-  good: false
+  good: maybe
   characters: 
 - title: C.E.D'oh
   season: 14
@@ -129,7 +129,7 @@ episodes:
     in the corporate world, he becomes the owner of the power plant and fires Mr.
     Burns... only to realize that running the plant means being away from family.
   simpsonsworld_id: 221696067982
-  good: false
+  good: maybe
   characters: 
 - title: "'Scuse Me While I Miss The Sky"
   season: 14
@@ -138,7 +138,7 @@ episodes:
     Lisa tires to save the nighttime sky from light pollution, while Bart attempts
     to restore his coolness by obtaining a hood ornament from Fat Tony's car.
   simpsonsworld_id: 221700675635
-  good: false
+  good: maybe
   characters: 
 - title: Three Gays of the Condo
   season: 14
@@ -146,7 +146,7 @@ episodes:
   description: Homer moves in with a gay couple after discovering a letter Marge wrote
     years earlier that implies she resents him.
   simpsonsworld_id: 221699139984
-  good: false
+  good: maybe
   characters: 
 - title: Dude, Where's My Ranch?
   season: 14
@@ -155,7 +155,7 @@ episodes:
     cowboy; Homer vows to stop beavers who've dammed a river and kept Native Americans
     from their land.
   simpsonsworld_id: 221700163549
-  good: false
+  good: maybe
   characters: 
 - title: Old Yeller-Belly
   season: 14
@@ -163,7 +163,7 @@ episodes:
   description: When Santa's Little Helper becomes Duff Beer's new, highly-paid mascot,
     his original owner comes out of the woodwork and claims the dog belongs to him.
   simpsonsworld_id: 221701187546
-  good: false
+  good: maybe
   characters: 
 - title: Brake My Wife, Please
   season: 14
@@ -172,7 +172,7 @@ episodes:
     begins to suffer from stress when the pressure of being the only full-time driver
     in the house takes its toll-and ends up running Homer over in her car.
   simpsonsworld_id: 229724227970
-  good: false
+  good: maybe
   characters: 
 - title: The Bart of War
   season: 14
@@ -181,7 +181,7 @@ episodes:
     memorabilia, Marge decides to place her son in a supervised activity, the Pre-Teen
     Braves.
   simpsonsworld_id: 229731395601
-  good: false
+  good: maybe
   characters: 
 - title: Moe Baby Blues
   season: 14
@@ -190,5 +190,5 @@ episodes:
     wanders off with some gangsters, Homer and Marge mistakenly believe that Moe is
     responsible for the baby's disappearance.
   simpsonsworld_id: 228412483812
-  good: false
+  good: maybe
   characters: 
