--- a/episodes/season_23.yml
+++ b/episodes/season_23.yml
@@ -6,7 +6,7 @@ episodes:
   description: Homer attempts to help a former CIA agent plagued by violent flashbacks
     from his past.
   simpsonsworld_id: 273517123847
-  good: false
+  good: maybe
   characters: 
 - title: Bart Stops to Smell the Roosevelts
   season: 23
@@ -15,7 +15,7 @@ episodes:
     taking charge of the boy's education. When Chalmers loses his job, Bart and his
     classmates attempt to get him reinstated.
   simpsonsworld_id: 273518659843
-  good: false
+  good: maybe
   characters: 
 - title: Treehouse of Horror XXII
   season: 23
@@ -24,7 +24,7 @@ episodes:
     to communicate with his family; a spoof of 'Dexter' features Homer tricking Flanders;
     a spoof of the movie 'Avatar' features Bart as a tentacled alien.
   simpsonsworld_id: 230493251807
-  good: false
+  good: maybe
   characters: 
 - title: Replaceable You
   season: 23
@@ -33,7 +33,7 @@ episodes:
     robots that rival Lisa's entry in a science fair project; Homer ends up working
     for his new assistant.
   simpsonsworld_id: 273736771817
-  good: false
+  good: maybe
   characters: 
 - title: The Food Wife
   season: 23
@@ -42,7 +42,7 @@ episodes:
     become successful food bloggers; Homer finds himself trapped in a meth lab after
     Marge deliberately gives him the wrong address for a restaurant.
   simpsonsworld_id: 233194563539
-  good: false
+  good: maybe
   characters: 
 - title: The Book Job
   season: 23
@@ -51,7 +51,7 @@ episodes:
     forms a literary gang in hopes of writing a bestselling "tween" novel and raking
     in millions.
   simpsonsworld_id: 264559171655
-  good: false
+  good: maybe
   characters: 
 - title: The Man in the Blue Flannel Pants
   season: 23
@@ -59,7 +59,7 @@ episodes:
   description: Burns appoints Homer the nuclear power plant's new account man, damning
     him to a 'Mad Men'-like existence; Lisa becomes Bart's mentor. Presented by FXX.
   simpsonsworld_id: 1071533123906
-  good: false
+  good: maybe
   characters: 
 - title: The Ten-Per-Cent Solution
   season: 23
@@ -67,7 +67,7 @@ episodes:
   description: After being fired from his popular kids' show, Krusty stages a comeback
     with help from an agent who's also an old flame.
   simpsonsworld_id: 230516291714
-  good: false
+  good: maybe
   characters: 
 - title: Holidays Of Future Passed
   season: 23
@@ -76,7 +76,7 @@ episodes:
     children on Christmas; an unwed Maggie gives birth while heading home for the
     holidays.
   simpsonsworld_id: 230516803889
-  good: false
+  good: maybe
   characters: 
 - title: Politically Inept, With Homer Simpson
   season: 23
@@ -85,7 +85,7 @@ episodes:
     on a cable talk show, and attempts to convince leaders of the Republican party
     to nominate singer Ted Nugent for president.
   simpsonsworld_id: 230549059731
-  good: false
+  good: maybe
   characters: 
 - title: The D'oh-cial Network
   season: 23
@@ -93,7 +93,7 @@ episodes:
   description: Lisa's idea for an online social network becomes a tremendous hit,
     but so many people become addicted to posting on the site, it leads to chaos.
   simpsonsworld_id: 230552131592
-  good: false
+  good: maybe
   characters: 
 - title: Moe Goes From Rags To Riches
   season: 23
@@ -101,7 +101,7 @@ episodes:
   description: Moe's bar rag tells the story of his existence; Milhouse tires of taking
     abuse from Bart.
   simpsonsworld_id: 230553667901
-  good: false
+  good: maybe
   characters: 
 - title: The Daughter Also Rises
   season: 23
@@ -110,7 +110,7 @@ episodes:
     a boyfriend; Bart and Milhouse set out on a 'mythbusting' mission at Springfield
     Elementary.
   simpsonsworld_id: 230562371905
-  good: false
+  good: maybe
   characters: 
 - title: At Long Last Leave
   season: 23
@@ -118,7 +118,7 @@ episodes:
   description: Fed up with the family's negative impact on the city, townspeople banish
     the Simpsons from Springfield. Presented by FXX.
   simpsonsworld_id: 230541891832
-  good: false
+  good: maybe
   characters: 
 - title: Exit Through The Kwik-E-Mart
   season: 23
@@ -127,7 +127,7 @@ episodes:
     unflattering graffiti of Homer's likeness; Apu panics when he's forced to compete
     with a friendly grocery store chain featuring a South Pacific motif.
   simpsonsworld_id: 304468035701
-  good: false
+  good: maybe
   characters: 
 - title: How I Wet Your Mother
   season: 23
@@ -135,7 +135,7 @@ episodes:
   description: With help from one of Professor Frink's inventions, Marge and the kids
     enter Homer's dreams in hopes of curing him of incontinence.
   simpsonsworld_id: 230597187582
-  good: false
+  good: maybe
   characters: 
 - title: Them, Robot
   season: 23
@@ -143,7 +143,7 @@ episodes:
   description: Homer becomes the last human employee at the nuclear power plant after
     Mr. Burns orders a mass firing and replaces staffers with robots.
   simpsonsworld_id: 230592067926
-  good: false
+  good: maybe
   characters: 
 - title: Beware My Cheating Bart
   season: 23
@@ -151,7 +151,7 @@ episodes:
   description: Bart falls for Jimbo's girlfriend Shauna; Homer buys a tricked-out
     treadmill so he can watch old episodes of a 'Lost'-like television show.
   simpsonsworld_id: 311189571768
-  good: false
+  good: maybe
   characters: 
 - title: A Totally Fun Thing Bart Will Never Do Again
   season: 23
@@ -159,7 +159,7 @@ episodes:
   description: The Simpsons vacation on a cruise liner, where Bart has so much fun
     he concocts a scheme to keep his family aboard the ship forever.
   simpsonsworld_id: 273522243657
-  good: false
+  good: maybe
   characters: 
 - title: The Spy Who Learned Me
   season: 23
@@ -168,7 +168,7 @@ episodes:
     and decides to keep the news secret from his family; Bart gets Nelson hooked on
     Krustyburgers so he'll gain weight and stop picking on him.
   simpsonsworld_id: 230588995967
-  good: false
+  good: maybe
   characters: 
 - title: Ned 'n Edna's Blend Agenda
   season: 23
@@ -176,7 +176,7 @@ episodes:
   description: Complications ensue when Flanders and Krabappel admit they're secretly
     married.
   simpsonsworld_id: 277098051530
-  good: false
+  good: maybe
   characters: 
 - title: Lisa Goes Gaga
   season: 23
@@ -184,5 +184,5 @@ episodes:
   description: Singer Lady Gaga attempts to cheer Lisa after she's voted the most
     unpopular kid at school.
   simpsonsworld_id: 233190467851
-  good: false
+  good: maybe
   characters: 
