--- a/episodes/season_24.yml
+++ b/episodes/season_24.yml
@@ -7,7 +7,7 @@ episodes:
     York City, Lisa wants to take in a Broadway play but ends up performing Shakespeare
     in Central Park.
   simpsonsworld_id: 221691971633
-  good: false
+  good: maybe
   characters: 
 - title: Treehouse of Horror XXIII
   season: 24
@@ -16,7 +16,7 @@ episodes:
     Springfield; the Simpsons are terrorized by the unknown in a spoof of 'Paranormal
     Activity'; Bart time travels in a spoof of 'Back to the Future.'
   simpsonsworld_id: 221695555645
-  good: false
+  good: maybe
   characters: 
 - title: Adventures in Baby-getting
   season: 24
@@ -24,7 +24,7 @@ episodes:
   description: Marge decides she wants to conceive another child; Bart realizes Lisa
     is up to something mysterious and vows to find out what it is.
   simpsonsworld_id: 221688899646
-  good: false
+  good: maybe
   characters: 
 - title: Gone Abie Gone
   season: 24
@@ -32,7 +32,7 @@ episodes:
   description: Homer and Marge search for Grampa after he disappears from the retirement
     home; Homer invests Lisa's college fund in an online poker Web site.
   simpsonsworld_id: 221688899887
-  good: false
+  good: maybe
   characters: 
 - title: Penny-Wiseguys
   season: 24
@@ -40,7 +40,7 @@ episodes:
   description: While serving jury duty, Fat Tony appoints an accountant as his temporary
     Don; an anemic Lisa eats bugs to increase her iron level.
   simpsonsworld_id: 221694531617
-  good: false
+  good: maybe
   characters: 
 - title: A Tree Grows in Springfield
   season: 24
@@ -49,7 +49,7 @@ episodes:
     Homer finds solace in a message seemingly written by God - until newsman Kent
     Brockman sets out to debunk the "miracle."
   simpsonsworld_id: 229733443727
-  good: false
+  good: maybe
   characters: 
 - title: The Day the Earth Stood Cool
   season: 24
@@ -57,7 +57,7 @@ episodes:
   description: Homer is elated when a cool dad and his family move next door, but
     his happiness ends when he realizes he has little in common with his new neighbors.
   simpsonsworld_id: 222374467937
-  good: false
+  good: maybe
   characters: 
 - title: To Cur, With Love
   season: 24
@@ -66,7 +66,7 @@ episodes:
     recounts the story of how Homer's heart broke after he was forced to give away
     his childhood dog.
   simpsonsworld_id: 222491715618
-  good: false
+  good: maybe
   characters: 
 - title: Homer Goes to Prep School
   season: 24
@@ -75,7 +75,7 @@ episodes:
     a shockwave that disables all electronic devices in Springfield.  Presented by
     FXX.
   simpsonsworld_id: 1094312515873
-  good: false
+  good: maybe
   characters: 
 - title: A Test Before Trying
   season: 24
@@ -83,7 +83,7 @@ episodes:
   description: Bart must pass a district-wide test to save Springfield Elementary;
     Homer uses a discarded parking meter to steal from unsuspecting drivers.
   simpsonsworld_id: 222388291945
-  good: false
+  good: maybe
   characters: 
 - title: The Changing of the Guardian
   season: 24
@@ -91,7 +91,7 @@ episodes:
   description: After narrowly surviving a tornado, Marge and Homer embark on a search
     for a couple who'll serve as Bart, Lisa and Maggie's legal guardians.
   simpsonsworld_id: 257684035668
-  good: false
+  good: maybe
   characters: 
 - title: Love is a Many-Splintered Thing
   season: 24
@@ -99,7 +99,7 @@ episodes:
   description: Bart attempts to patch things up with his old sweetheart, Mary Spuckler,
     and despite Lisa's input, still manages to sabotage his chances of finding love.
   simpsonsworld_id: 257681987573
-  good: false
+  good: maybe
   characters: 
 - title: Hardly Kirk-ing
   season: 24
@@ -107,7 +107,7 @@ episodes:
   description: With Bart's help, Milhouse transforms into his father; Homer discovers
     a talent for finding things in hidden-picture books.
   simpsonsworld_id: 257686595928
-  good: false
+  good: maybe
   characters: 
 - title: Gorgeous Grampa
   season: 24
@@ -116,7 +116,7 @@ episodes:
     character from his past whom audiences love to hate, and despite Homer and Marge's
     objections, incorporates Bart into the act.
   simpsonsworld_id: 257687107857
-  good: false
+  good: maybe
   characters: 
 - title: Black-Eyed, Please
   season: 24
@@ -125,7 +125,7 @@ episodes:
     Lisa is shocked and puzzled when she discovers that a substitute teacher hates
     her.
   simpsonsworld_id: 257689667578
-  good: false
+  good: maybe
   characters: 
 - title: Dark Knight Court
   season: 24
@@ -134,7 +134,7 @@ episodes:
     prank; after buying a comic book collection, Mr. Burns transforms into a 'Batman'-like
     superhero.
   simpsonsworld_id: 257714243647
-  good: false
+  good: maybe
   characters: 
 - title: What Animated Women Want
   season: 24
@@ -142,7 +142,7 @@ episodes:
   description: In an episode that focuses on the choices people make and their outcomes...
     Homer attempts to save his marriage; Milhouse woos Lisa. Presented by FXX.
   simpsonsworld_id: 1094243907551
-  good: false
+  good: maybe
   characters: 
 - title: Pulpit Friction
   season: 24
@@ -150,7 +150,7 @@ episodes:
   description: Lovejoy quits the church after the Parson appoints a charismatic reverend
     to reinvigorate the parish; Marge tracks down her old wedding dress.
   simpsonsworld_id: 257728579751
-  good: false
+  good: maybe
   characters: 
 - title: Whiskey Business
   season: 24
@@ -159,7 +159,7 @@ episodes:
     to the distribution of Moe's own brand of whiskey; Bart cares for Grampa; Lisa
     realizes that her favorite musicians have been turned into holograms.
   simpsonsworld_id: 257737283653
-  good: false
+  good: maybe
   characters: 
 - title: The Fabulous Faker Boy
   season: 24
@@ -167,7 +167,7 @@ episodes:
   description: Bart takes piano lessons in hopes of impressing his beautiful young
     teacher; Homer goes completely bald; Marge teaches a Russian man how to drive.
   simpsonsworld_id: 257760323921
-  good: false
+  good: maybe
   characters: 
 - title: The Saga of Carl
   season: 24
@@ -175,7 +175,7 @@ episodes:
   description: Homer, Moe and Lenny travel to Iceland to retrieve lottery winnings
     that Carl ran off with.
   simpsonsworld_id: 257753667515
-  good: false
+  good: maybe
   characters: 
 - title: Dangers on a Train
   season: 24
@@ -183,5 +183,5 @@ episodes:
   description: Homer secretly reconstructs a kiddy train as Marge's anniversary present;
     Marge attracts the attention of a potential paramour online.
   simpsonsworld_id: 257768003795
-  good: false
+  good: maybe
   characters: 
