--- a/episodes/season_27.yml
+++ b/episodes/season_27.yml
@@ -7,7 +7,7 @@ episodes:
     moves on with her life. Homer is initially devastated, but soon stumbles into
     a romance with a younger woman.
   simpsonsworld_id: 770426947744
-  good: false
+  good: maybe
   characters: 
 - title: Cue Detective
   season: 27
@@ -15,7 +15,7 @@ episodes:
   description: A celebrity television chef challenges Homer to a barbecue cook-off.
     But before the competition, Homer's new, prized barbecue grill is stolen.
   simpsonsworld_id: 770595395906
-  good: false
+  good: maybe
   characters: 
 - title: Puffless
   season: 27
@@ -24,7 +24,7 @@ episodes:
     when Selma takes it up again. Meanwhile, Maggie goes on an adventure with some
     local creatures.
   simpsonsworld_id: 772103747997
-  good: false
+  good: maybe
   characters: 
 - title: Halloween of Horror
   season: 27
@@ -33,7 +33,7 @@ episodes:
     the block. But when Lisa is traumatized at Krustyland Horror Night, she feels
     she cannot handle Halloween anymore.
   simpsonsworld_id: 770425923947
-  good: false
+  good: maybe
   characters: 
 - title: Treehouse of Horror XXVI
   season: 27
@@ -42,7 +42,7 @@ episodes:
     Homer wakes up with short-term memory loss; Because of radiation, Lisa, Bart and
     Milhouse gain super-powers.
   simpsonsworld_id: 770433091920
-  good: false
+  good: maybe
   characters: 
 - title: Friend with Benefit
   season: 27
@@ -51,7 +51,7 @@ episodes:
     while Homer makes friends with Harper's dad and sets out to continue living the
     good life when Lisa decides to end the friendship.
   simpsonsworld_id: 770437187884
-  good: false
+  good: maybe
   characters: 
 - title: Lisa with an 'S'
   season: 27
@@ -59,7 +59,7 @@ episodes:
   description: Broadway legend Laney Fontaine transforms Lisa into a show-biz kid
     after Homer loses her chance at band camp.
   simpsonsworld_id: 770417219938
-  good: false
+  good: maybe
   characters: 
 - title: Paths of Glory
   season: 27
@@ -67,7 +67,7 @@ episodes:
   description: Lisa tries to restore the reputation of a forgotten Springfield female
     inventor, while Bart takes full advantage of a diagnosis that he is a sociopath.
   simpsonsworld_id: 770422339536
-  good: false
+  good: maybe
   characters: 
 - title: Barthood
   season: 27
@@ -76,7 +76,7 @@ episodes:
     in search of approval from his father and in the shadow of his more-successful
     younger sister.
   simpsonsworld_id: 1071531075851
-  good: false
+  good: maybe
   characters: 
 - title: The Girl Code
   season: 27
@@ -85,7 +85,7 @@ episodes:
     working as a dishwasher at a Greek restaurant. Meanwhile, Lisa creates an app
     that can predict the effect any post on social media will have.
   simpsonsworld_id: 770434627559
-  good: false
+  good: maybe
   characters: 
 - title: Teenage Mutant Milk-Caused Hurdles
   season: 27
@@ -94,7 +94,7 @@ episodes:
     teacher, and a new milk-based product that Homer buys from the Kwik-E-Mart causes
     big changes in Bart and Lisa.
   simpsonsworld_id: 770430019813
-  good: false
+  good: maybe
   characters: 
 - title: Much Apu About Something
   season: 27
@@ -103,7 +103,7 @@ episodes:
     and Bart decides that he's through with being bad after his latest prank spirals
     out of control.
   simpsonsworld_id: 770449475567
-  good: false
+  good: maybe
   characters: 
 - title: Love Is in the N2-O2-Ar-CO2-Ne-He-CH4
   season: 27
@@ -112,7 +112,7 @@ episodes:
     a new pill at the Springfield Retirement Castle causes Grandpa to hallucinate
     back to his happiest moments.
   simpsonsworld_id: 770439747712
-  good: false
+  good: maybe
   characters: 
 - title: Gal of Constant Sorrow
   season: 27
@@ -121,7 +121,7 @@ episodes:
     but Bart warns her that she will just let her down. Meanwhile, Homer tries to
     rescue the cat, who is trapped in the walls of the house.
   simpsonsworld_id: 770451523845
-  good: false
+  good: maybe
   characters: 
 - title: Lisa the Veterinarian
   season: 27
@@ -130,7 +130,7 @@ episodes:
     of the job get to her head. Meanwhile, Marge decides to take a job as a crime
     scene cleaner.
   simpsonsworld_id: 770452547696
-  good: false
+  good: maybe
   characters: 
 - title: The Marge-ian Chronicles
   season: 27
@@ -139,7 +139,7 @@ episodes:
     Mars in ten years, and Homer's strategy to use reverse psychology to talk her
     out of it backfires.
   simpsonsworld_id: 770891331927
-  good: false
+  good: maybe
   characters: 
 - title: The Burns Cage
   season: 27
@@ -148,7 +148,7 @@ episodes:
     gets the lead in the school production of "Casablanca" alongside a new male student,
     sparking Millhouse's jealousy.
   simpsonsworld_id: 770893891557
-  good: false
+  good: maybe
   characters: 
 - title: How Lisa Got Her Marge Back
   season: 27
@@ -157,7 +157,7 @@ episodes:
     Marge takes Lisa on a trip to Capitol City to regain her friendship. Meanwhile,
     Bart uses Maggie as his new partner in crime for his practical jokes.
   simpsonsworld_id: 770893891750
-  good: false
+  good: maybe
   characters: 
 - title: Fland Canyon
   season: 27
@@ -165,7 +165,7 @@ episodes:
   description: Maggie will not go to sleep, so Homer tells her a bedtime story about
     when the Simpsons and the Flanders went together to the Grand Canyon.
   simpsonsworld_id: 1071851075844
-  good: false
+  good: maybe
   characters: 
 - title: To Courier with Love
   season: 27
@@ -174,7 +174,7 @@ episodes:
     a travel agent to be a courier of a top-secret briefcase in exchange for a discounted
     family vacation to Paris.
   simpsonsworld_id: 772102211921
-  good: false
+  good: maybe
   characters: 
 - title: Simprovised
   season: 27
@@ -183,7 +183,7 @@ episodes:
     improv comedy troupe. Meanwhile, Marge rebuilds Bart's treehouse, but gets no
     thanks from him. Homer later appears live to answer phoned in questions.
   simpsonsworld_id: 770892355976
-  good: false
+  good: maybe
   characters: 
 - title: Orange Is the New Yellow
   season: 27
@@ -191,5 +191,5 @@ episodes:
   description: Marge lets Bart go to the park alone because he's too irritating, then
     she ends up getting arrested for leaving him unsupervised.
   simpsonsworld_id: 772111939897
-  good: false
+  good: maybe
   characters: 
