--- a/episodes/season_28.yml
+++ b/episodes/season_28.yml
@@ -6,7 +6,7 @@ episodes:
   description: Mr. Burns puts on a variety show at the Springfield Bowl. Presented
     by FXX.
   simpsonsworld_id: 1066704963871
-  good: false
+  good: maybe
   characters: 
 - title: Friends and Family
   season: 28
@@ -15,7 +15,7 @@ episodes:
     Burns hires the other Simpsons as his live-in virtual reality family. Presented
     by FXX.
   simpsonsworld_id: 1064038980002
-  good: false
+  good: maybe
   characters: 
 - title: The Town
   season: 28
@@ -23,7 +23,7 @@ episodes:
   description: Homer takes the family on a "hate-cation" to Boston after he catches
     Bart rooting for a rival football team. Presented by FXX.
   simpsonsworld_id: 1064043075512
-  good: false
+  good: maybe
   characters: 
 - title: Treehouse of Horror XXVII
   season: 28
@@ -32,7 +32,7 @@ episodes:
     Lisa's imaginary friend kills her real friends; Moe recruits Bart into his group
     of covert barfly agents. Presented by FXX.
   simpsonsworld_id: 1063870531930
-  good: false
+  good: maybe
   characters: 
 - title: Trust but Clarify
   season: 28
@@ -41,7 +41,7 @@ episodes:
     for a promotion; Kent Brockman struggles with the changing media world. Presented
     by FXX.
   simpsonsworld_id: 1064042051872
-  good: false
+  good: maybe
   characters: 
 - title: There Will Be Buds
   season: 28
@@ -49,7 +49,7 @@ episodes:
   description: Homer coaches the kids' lacrosse team with Kirk Van Houten, who disappears
     before the championship game, after Homer rants about him being a loser.
   simpsonsworld_id: 1064041539874
-  good: false
+  good: maybe
   characters: 
 - title: Havana Wild Weekend
   season: 28
@@ -58,7 +58,7 @@ episodes:
     Castle and V.A. hospital are unable to solve his health problems. Presented by
     FXX.
   simpsonsworld_id: 1064044099513
-  good: false
+  good: maybe
   characters: 
 - title: Dad Behavior
   season: 28
@@ -66,7 +66,7 @@ episodes:
   description: Homer discovers an app that makes his life easier, while Grampa learns
     that he'll be a father again. Presented by FXX.
   simpsonsworld_id: 1064046147533
-  good: false
+  good: maybe
   characters: 
 - title: The Last Traction Hero
   season: 28
@@ -75,7 +75,7 @@ episodes:
     to receive romance from an unexpected source; Lisa attempts to keep the peace
     as bus monitor. Presented by FXX.
   simpsonsworld_id: 1064046147517
-  good: false
+  good: maybe
   characters: 
 - title: The Nightmare After Krustmas
   season: 28
@@ -84,7 +84,7 @@ episodes:
     Lovejoy seeks converts to boost attendance at church; A Christmas toy scares Maggie.
     Presented by FXX.
   simpsonsworld_id: 1064045635565
-  good: false
+  good: maybe
   characters: 
 - title: Pork and Burns
   season: 28
@@ -93,7 +93,7 @@ episodes:
     of living, so the Simpsons have to part with items that no longer bring them joy.  Presented
     by FXX.
   simpsonsworld_id: 1070436931706
-  good: false
+  good: maybe
   characters: 
 - title: Fatzcarraldo
   season: 28
@@ -102,7 +102,7 @@ episodes:
     turns to the last bastion of greasy food for comfort; Lisa must find a good news
     story when her school radio station is in jeopardy. Presented by FXX.
   simpsonsworld_id: 1064044611770
-  good: false
+  good: maybe
   characters: 
 - title: The Cad and the Hat
   season: 28
@@ -110,7 +110,7 @@ episodes:
   description: Bart deals with his guilt of betraying Lisa; Homer is revealed to be
     a master chess player. Presented by FXX.
   simpsonsworld_id: 1064044611752
-  good: false
+  good: maybe
   characters: 
 - title: Kamp Krustier
   season: 28
@@ -118,7 +118,7 @@ episodes:
   description: Bart and Lisa return home following a traumatic incident at Kamp Krusty,
     putting an end to Homer and Marge's sexual encounters. Presented by FXX.
   simpsonsworld_id: 1064043587996
-  good: false
+  good: maybe
   characters: 
 - title: 22 for 30
   season: 28
@@ -126,7 +126,7 @@ episodes:
   description: Bart becomes a star basketball player at Springfield Elementary. Presented
     by FXX.
   simpsonsworld_id: 1064044099732
-  good: false
+  good: maybe
   characters: 
 - title: A Father's Watch
   season: 28
@@ -134,7 +134,7 @@ episodes:
   description: As Homer and Marge try a different parenting style on Bart, Grampa
     gives him a special watch. Presented by FXX.
   simpsonsworld_id: 1064046659528
-  good: false
+  good: maybe
   characters: 
 - title: The Caper Chase
   season: 28
@@ -142,28 +142,28 @@ episodes:
   description: Mr. Burns starts his own for-profit university and hires Homer as a
     professor. Presented by FXX.
   simpsonsworld_id: 1064044611790
-  good: false
+  good: maybe
   characters: 
 - title: Looking for Mr. Goodbart
   season: 28
   episode: 20
   description: Bart befriends the grandmothers of Springfield. Presented by FXX.
   simpsonsworld_id: 1064046659522
-  good: false
+  good: maybe
   characters: 
 - title: Moho House
   season: 28
   episode: 21
   description: Moe helps Homer and Marge work on their marriage. Presented by FXX.
   simpsonsworld_id: 1064045635817
-  good: false
+  good: maybe
   characters: 
 - title: Dogtown
   season: 28
   episode: 22
   description: The dogs of Springfield assert their dominance. Presented by FXX.
   simpsonsworld_id: 1064045635799
-  good: false
+  good: maybe
   characters: 
 - title: The Great Phatsby Parts 1 & 2
   season: 28
@@ -172,5 +172,5 @@ episodes:
     mysterious music mogul. After being conned by him and reduced to bankruptcy, Mr.
     Burns seeks revenge on the music producer. Presented by FXX.
   simpsonsworld_id: 1077274179891
-  good: false
+  good: maybe
   characters: 
